Add page content and assets HTML

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <body>
         <header>
-            <h1 class="logo">Colmar Academy</h1> 
             <img src="./resources/images/ic-logo.svg" alt="Colmar Academy logo">
+            <h1 class="logo desktop">Colmar Academy</h1> 
             <nav class="desktop">
                 <ul>
                     <li><a href="#">On campus</a></li>
@@ -24,16 +24,89 @@
         </header>
 
         <main>
-            <div class="banner">
-                <img src="" alt="Students reading at table.">
+            <section class="banner">
+                <img src="./resources/images/banner.jpg" alt="Students reading at table outside.">
                 <h2>Learn something new everyday</h2>
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <button>Start here</button>
-            </div>
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                <a href="#" class="button">Start here</a>
+            </section>
+
+            <section>
+                <section class="desktop quote">
+                    <img src="./resources/images/information-main.jpg" alt="Man reading a book outside.">
+                    <h3>It doesn't hurt to keep practicing</h3>
+                    <p>Laboriosam dolores perspiciatis, sint facere, laudantium libero temporibus iste ullam odio dolor explicabo, quam assumenda modi? Dolor quo quia earum nisi iusto!</p>
+                    <p class="quote">Emanuel, Sr Strategist at Hiring.com</p>
+                </section>
+
+                <section class="sidepanel">
+                    <img src="./resources/images/information-orientation.jpg" alt="Shadows of students walking">
+                    <h4>Orientation date</h4>
+                    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                    <a href="#" class="read">Read more</a>
+
+                    <img src="./resources/images/information-campus.jpg" alt="Campus with world map, ceiling lamps and students">
+                    <h4>Our campus</h4>
+                    <p>Find which campus is close by you</p>
+                    <a href="#" class="read">Read more</a>
+
+                    <img src="./resources/images/information-guest-lecture.jpg" alt="Guest lecturer, Oliver Sack">
+                    <h4>Our guest lecture</h4>
+                    <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                    <a href="#" class="read">Read more</a>
+                </section>
+
+                <section class="courses">
+                    <h3>Start learning</h3>
+
+                    <img src="./resources/images/course-software.jpg" alt="Desktop computer with code">
+                    <h4>Software Engineering</h4>
+                    <p>COURSES <br> Web Development, Mobile Development, iOT, APIs</p>
+
+                    <img src="./resources/images/course-computer-art.jpg" alt="Phone held by a hand">
+                    <h4>Computer Art</h4>
+                    <p>COURSES <br> Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+
+                    <img src="./resources/images/course-design.jpg" alt="Person holding a vintage camera">
+                    <h4>Design</h4>
+                    <p>COURSES <br> User Experience Design, User Research, Visual Design</p>
+
+                    <img src="./resources/images/course-data.jpg" alt="Laptop with a document of graphs open">
+                    <h4>Data</h4>
+                    <p>COURSES <br> Data Science, Big Data, SQL, Data Visualization</p>
+
+                    <img src="./resources/images/course-business.jpg" alt="Wooden chess pieces">
+                    <h4>Business</h4>
+                    <p>COURSES <br> Product Development, Business Development, Startup</p>
+
+                    <img src="./resources/images/course-marketing.jpg" alt="Person touching smartwatch">
+                    <h4>Marketing</h4>
+                    <p>COURSES <br> Analytics, Content Marketing, Mobile Marketing</p>
+                </section>
+
+                <section class="thesis">
+                    <h3>Thesis exhibit</h3>
+
+                    <video src="./resources/videos/thesis.mp4" controls>Sorry, unable to display this video.</video>
+                    <h4>Reimagine urban</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus rerum nostrum in laudantium autem. Earum adipisci, tempore amet, aliquid ipsam iste consequatur id recusandae sequi dolorum, voluptatem cum non officiis.</p>
+                   
+                    <img src="./resources/images/thesis-fisma.jpg" alt="Person sketching on paper">
+                    <h4>Fisma: Design and Prototype</h4>
+                    <p>Designer showcase of new prototype product</p>
+
+                    <img src="./resources/images/thesis-now-and-then.jpg" alt="Empire State Building in New York">
+                    <h4>Now and then</h4>
+                    <p>Research study about New York</p>
+                </section>
+
+            </section>
         </main>
 
         <footer>
-
+            <p>&copy 2016 Colmar Academy. All rights reserved</p>
+            <a href="#" class="footer">Terms</a>
+            <a href="#" class="footer">Privacy</a>
         </footer>
     </body>
 
