Structure and position HTML and CSS

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="./resources/css/index.css">
         <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
+        <link rel="stylesheet" type="text/css" href="./resources/css/index.css">
         <title>Colmar Academy</title>
     </head>
 
     <body>
         <header>
-            <img src="./resources/images/ic-logo.svg" alt="Colmar Academy logo">
+            <img src="./resources/images/ic-logo.svg" alt="Colmar Academy logo" class="logo">
             <h1 class="logo desktop">Colmar Academy</h1> 
             <nav class="desktop">
                 <ul>
@@ -27,12 +27,14 @@
         <main>
             <section class="banner">
                 <img src="./resources/images/banner.jpg" alt="Students reading at table outside.">
-                <h2>Learn something new everyday</h2>
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-                <a href="#" class="button">Start here</a>
+                <section class="banner-text">
+                    <h2>Learn something new everyday</h2>
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                    <a href="#" class="button">Start here</a>
+                </section>
             </section>
 
-            <section>
+            <section class="practice">
                 <section class="desktop quote">
                     <img src="./resources/images/information-main.jpg" alt="Man reading a book outside.">
                     <h3>It doesn't hurt to keep practicing</h3>
