Structure and layout of banner, header, sidepanel

--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
 
     <body>
         <header>
-            <img src="./resources/images/ic-logo.svg" alt="Colmar Academy logo" class="logo">
-            <h1 class="logo desktop">Colmar Academy</h1> 
-            <nav class="desktop">
-                <ul>
-                    <li><a href="#">On campus</a></li>
-                    <li><a href="#">Online</a></li>
-                    <li><a href="#">For companies</a></li>
-                    <li><a href="#">Sign in</a></li>
-                </ul>
-            </nav>
+            <!-- <div class="content"> -->
+                <img src="./resources/images/ic-logo.svg" alt="Colmar Academy logo" class="logo">
+                <h1 class="logo desktop">Colmar Academy</h1> 
+                <nav class="desktop">
+                    <ul>
+                        <li><a href="#">On campus</a></li>
+                        <li><a href="#">Online</a></li>
+                        <li><a href="#">For companies</a></li>
+                        <li><a href="#">Sign in</a></li>
+                    </ul>
+                </nav>
+            <!-- </div> -->
         </header>
 
         <main>
@@ -37,26 +39,34 @@
             <section class="practice">
                 <section class="desktop quote">
                     <img src="./resources/images/information-main.jpg" alt="Man reading a book outside.">
-                    <h3>It doesn't hurt to keep practicing</h3>
-                    <p>Laboriosam dolores perspiciatis, sint facere, laudantium libero temporibus iste ullam odio dolor explicabo, quam assumenda modi? Dolor quo quia earum nisi iusto!</p>
-                    <p class="quote">Emanuel, Sr Strategist at Hiring.com</p>
+                    <section class="practice-text">
+                        <h3>It doesn't hurt to keep practicing</h3>
+                        <p>Laboriosam dolores perspiciatis, sint facere, laudantium libero temporibus iste ullam odio dolor explicabo, quam assumenda modi? Dolor quo quia earum nisi iusto!</p>
+                        <p class="quote">Emanuel, Sr Strategist at Hiring.com</p>
+                    </section>
                 </section>
 
                 <section class="sidepanel">
-                    <img src="./resources/images/information-orientation.jpg" alt="Shadows of students walking">
-                    <h4>Orientation date</h4>
-                    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                    <a href="#" class="read">Read more</a>
+                    <section class="panel orientation">
+                        <img src="./resources/images/information-orientation.jpg" alt="Shadows of students walking">
+                        <h4>Orientation date</h4>
+                        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                        <a href="#" class="read">Read more</a>
+                    </section>
 
-                    <img src="./resources/images/information-campus.jpg" alt="Campus with world map, ceiling lamps and students">
-                    <h4>Our campus</h4>
-                    <p>Find which campus is close by you</p>
-                    <a href="#" class="read">Read more</a>
+                    <section class="panel campus">
+                        <img src="./resources/images/information-campus.jpg" alt="Campus with world map, ceiling lamps and students">
+                        <h4>Our campus</h4>
+                        <p>Find which campus is close by you</p>
+                        <a href="#" class="read">Read more</a>
+                    </section>
 
-                    <img src="./resources/images/information-guest-lecture.jpg" alt="Guest lecturer, Oliver Sack">
-                    <h4>Our guest lecture</h4>
-                    <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-                    <a href="#" class="read">Read more</a>
+                    <section class="panel guestlecture">
+                        <img src="./resources/images/information-guest-lecture.jpg" alt="Guest lecturer, Oliver Sack">
+                        <h4>Our guest lecture</h4>
+                        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                        <a href="#" class="read">Read more</a>
+                    </section>
                 </section>
 
                 <section class="courses">
