Change layout to flexbox

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <main>
             <section class="banner">
                 <img src="./resources/images/banner.jpg" alt="Students reading at table outside.">
-                <section class="banner-text">
-                    <h2>Learn something new everyday</h2>
-                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-                    <a href="#" class="button">Start here</a>
+                    <section class="banner-text">
+                        <h2>Learn something new everyday</h2>
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                        <a href="#" class="button">Start here</a>
+                    </section>
                 </section>
             </section>
 
