--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Orelega+One&display=swap" rel="stylesheet">   
+        <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">   
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
         <link rel="stylesheet" type="text/css" href="./resources/css/index.css">
         <title>Colmar Academy</title>
@@ -14,18 +15,24 @@
 
     <body>
         <header>
-            <div class="logo-holder">
-                <img src="./resources/images/ic-logo.svg" alt="Colmar Academy logo" class="logo">
-                <h1 class="logo desktop">Colmar Academy</h1> 
+            <div class="logo-holder desktop">
+                <img src="./resources/images/ic-logo.svg" alt="Colmar Academy logo" class="desktop">
+                <h1 class="desktop">Colmar Academy</h1> 
             </div>
-                <nav class="desktop">
-                    <ul>
-                        <li><a href="#">On campus</a></li>
-                        <li><a href="#">Online</a></li>
-                        <li><a href="#">For companies</a></li>
-                        <li><a href="#">Sign in</a></li>
-                    </ul>
-                </nav>
+            <nav class="desktop">
+                <ul>
+                    <li><a href="#">On campus</a></li>
+                    <li><a href="#">Online</a></li>
+                    <li><a href="#">For companies</a></li>
+                    <li><a href="#">Sign in</a></li>
+                </ul>
+            </nav>
+            <nav class="mobile">
+                <a href="#"><img src="./resources/images/ic-logo.svg" alt="Colmar Academy logo"></a>
+                <a href="#"><img src="./resources/images/ic-on-campus.svg" alt="On campus icon"></a>
+                <a href="#"><img src="./resources/images/ic-online.svg" alt="Online icon"></a>
+                <a href="#"><img src="./resources/images/ic-login.svg" alt="Sign in icon"></a>
+            </nav>
         </header>
 
         <main>
@@ -33,7 +40,7 @@
                 <img src="./resources/images/banner.jpg" alt="Students reading at table outside.">
                     <section class="banner-text">
                         <h2>Learn something new everyday</h2>
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <a href="#" class="button">Start here</a>
                     </section>
                 </section>
@@ -129,8 +136,10 @@
                     
                     <section class="thesis-video">
                         <video src="./resources/videos/thesis.mp4" type="video/mp4" controls>Sorry, unable to display this video.</video>
-                        <h4>Reimagine urban</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus rerum nostrum in laudantium autem. Earum adipisci, tempore amet, aliquid ipsam iste consequatur id recusandae sequi dolorum, voluptatem cum non officiis.</p>    
+                        <div class="thesis-text desktop">
+                            <h4>Reimagine urban</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus rerum nostrum in laudantium autem. Earum adipisci, tempore amet, aliquid ipsam iste consequatur id recusandae sequi dolorum, voluptatem cum non officiis.</p>
+                        </div>    
                     </section>
                     
                     <section class="desktop thesis-sidepanel">
