--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
                 <section class="practice-sidepanel">
                     <section class="panel orientation">
-                        <img src="./resources/images/information-orientation.jpg" alt="Shadows of students walking">
+                            <img src="./resources/images/information-orientation.jpg" alt="Shadows of students walking" class="desktop">
+                            <img src="./resources/images/information-orientation-mobile.jpg" alt="Shadows of students walking" class="mobile">
                         <div class="panel-text">
                             <h4>Orientation date</h4>
                             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -67,7 +68,8 @@
                     </section>
 
                     <section class="panel campus">
-                        <img src="./resources/images/information-campus.jpg" alt="Campus with world map, ceiling lamps and students">
+                        <img src="./resources/images/information-campus.jpg" alt="Campus with world map, ceiling lamps and students" class="desktop">
+                        <img src="./resources/images/information-campus-mobile.jpg" alt="Campus with world map, ceiling lamps and students" class="mobile">
                         <div class="panel-text">
                             <h4>Our campus</h4>
                             <p>Find which campus is close by you</p>
@@ -76,7 +78,8 @@
                     </section>
 
                     <section class="panel guestlecture">
-                        <img src="./resources/images/information-guest-lecture.jpg" alt="Guest lecturer, Oliver Sack">
+                        <img src="./resources/images/information-guest-lecture.jpg" alt="Guest lecturer, Oliver Sack" class="desktop">
+                        <img src="./resources/images/information-guest-lecture-mobile.jpg" alt="Guest lecturer, Oliver Sack" class="mobile">
                         <div class="panel-text">
                             <h4>Our guest lecture</h4>
                             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
